Fix repo title truncate

--- a/front/src/app/repositories/repositories.component.scss
+++ b/front/src/app/repositories/repositories.component.scss
@@ -47,6 +47,7 @@
   &__title-wrapper {
     display: flex;
     flex: 1;
+    min-width: 0;
   }
 
   &__type {
